--- a/view/login/login1.html
+++ b/view/login/login1.html
@@ -1,4 +1,13 @@
-<header class="header">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header class="header">
         <a href="#" class="logo"><ion-icon name="book"></ion-icon>coffee</a>
         <nav class="nav">
             <a href="#">Trang Chủ</a>
@@ -19,7 +28,7 @@
 
             <div class="wrapper-login">
                 <h2>Member Login</h2>
-                <form action="index.php?act=dangky" method="post">
+                <form action="#">
                     <div class="input-box">
                         <span class="icon"><ion-icon name="mail"></ion-icon></span>
                         <input type="email" required>
@@ -29,6 +38,11 @@
                         <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
                         <input type="password" required>
                         <label>Enter your password</label>
+                    </div>
+                    <div class="input-box">
+                        <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
+                        <input type="password" required>
+                        <label>Nhập lại mật khẩu</label>
                     </div>
                     <div class="remember-forgot">
                         <label><input type="checkbox">Remember me</label>
@@ -40,10 +54,9 @@
                     </div>
                 </form>
             </div>
-            <div class="boxphai">
-               <?php include "view/boxright.php";?>
-               
-            </div>
-            
 
         </section>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+</body>
+</html>
