--- a/view/login/login.html
+++ b/view/login/login.html
@@ -1,4 +1,16 @@
-<header class="header">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        
+    </style>
+</head>
+<body>
+    <header class="header">
         <a href="#" class="logo"><ion-icon name="book"></ion-icon>coffee</a>
         <nav class="nav">
             <a href="#">Trang Chủ</a>
@@ -30,20 +42,19 @@
                         <input type="password" required>
                         <label>Enter your password</label>
                     </div>
-                    <div class="input-box">
-                        <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-                        <input type="password" required>
-                        <label>Nhập lại mật khẩu</label>
-                    </div>
                     <div class="remember-forgot">
                         <label><input type="checkbox">Remember me</label>
                         <a href="#">Forgot password?</a>
                     </div>
                     <button type="submit" class="btn">Login</button>
                     <div class="register-link">
-                        <p>Not a member <a href="index.php?act=dangky">Sign up now</a></p>
+                        <p>Not a member <a href="#">Sign up now</a></p>
                     </div>
                 </form>
             </div>
 
         </section>
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+</body>
+</html>
